K8s-specifications/deployment.yml
# ---------------- BACKEND DEPLOYMENT ----------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-car-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-car-app
  template:
    metadata:
      labels:
        app: backend-car-app
    spec:
      containers:
        - name: backend-car-app
          image: atharva25s/backend-car-app:6777aa4
          imagePullPolicy: Always
          ports:
            - containerPort: 8000

---

# ---------------- FRONTEND DEPLOYMENT ----------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-car-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-car-app
  template:
    metadata:
      labels:
        app: frontend-car-app
    spec:
      containers:
        - name: frontend-car-app
          image: atharva25s/frontend-car-app:6777aa4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
