K8s-specifications/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        # Backend Routing
        - path: /api/
          pathType: Prefix
          backend:
            service:
              name: backend-car-app-service
              port:
                number: 80
        # Frontend Routing
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-car-app-service
              port:
                number: 80
